# sphincter

./: .gitignore  .pdm-python  Makefile  README.md  pyproject.toml
data/raw/: data.csv  data_explained_for_Teddy.docx  data_sphincter_paper.csv  hyper_challenge.csv  plan_for_Teddy.docx  pressure_data.csv
docs/: .gitignore  _quarto.yml  bibliography.bib  branchpoints.md  collaterals.md  density.md  diameter.md  flow.md  flow.qmd  hypertension.md  index.md  index.typ  intro.html  intro.md  intro.qmd  main_findings.md  main_text_bit.docx  main_text_bit.html  main_text_bit.md  meta.md  overall_strategy.md  pressure.md  pulsatility.html  pulsatility.md  pulsatility.qmd  report.html  report.qmd  slides-2023-11-03.qmd  tortuosity.md  whisker.html  whisker.md
inferences/: inferences.toml
inferences/branchpoints/: readme.md
inferences/collaterals/: readme.md
inferences/density/: config.toml
inferences/diameter/: config.toml
inferences/flow-basic/: config.toml
inferences/flow-basic-flux/: config.toml
inferences/flow-basic-speed/: config.toml
inferences/flow-big-flux/: config.toml
inferences/flow-big-speed/: config.toml
inferences/length/: config.toml
sphincter/: Branchpoints.ipynb  Diameter.ipynb  Main text figures.ipynb  Pressure measurements.ipynb  Pressure.ipynb  Q2.ipynb  Supporting figures.ipynb  Untitled.ipynb  __init__.py  branchpoints.py  collaterals.ipynb  collaterals.py  data_preparation.py  density.ipynb  explore.ipynb  flow.ipynb  hypertension.ipynb  inference_configuration.py  investigate.ipynb  plotting.py  prepare_data.py  pulsatility.ipynb  sample.py  stan_input_functions.py  tortuosity.ipynb  util.py  whisker.ipynb
(+4990 files in other folders)
