[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphincter"
authors = [
    {name = "Teddy Groves", email = "groves.teddy@gmail.com"},
]
version = "0.1.0"
description = "Models of measurements of brain blood vessel sphincters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz",
    "cmdstanpy",
    "jupyter",
    "numpy",
    "openpyxl",
    "pandas",
    "pandera@git+https://github.com/unionai-oss/pandera.git@main",
    "pydantic >= 2.0.0",
    "pyspark",
    "scipy",
    "scikit-learn",
    "toml",
    "zarr",
    "seaborn>=0.13.2",
    "pyarrow>=18.0.0",
    "bambi>=0.14.0",
]
license = {text = "MIT"}

[tool.setuptools]
packages = ["sphincter"]

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"

[tool.pdm]
distribution = true

[tool.mypy]
plugins = ["pandera.mypy"]

[tool.ruff]
line-length = 80
